# bsti

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  flake.nix
examples/: README.md  even_more_files_alt  even_more_files_orig  example-branching.bgv  example-forward.bgv  example-generalized-arith.bgv  example-generalized-recursive-arith.bgv  example-infinite.bgv  example-recursion.bgv  example-simple.bgv  generalized-arith.bgv  generalized-recursive-arith.bgv  math_server  math_server_branch  math_server_decl  math_server_decl_infer_recv  more_files_alt  problem1-fixed.bgv  problem1.bgv  problem2-fixed.bgv  problem2.bgv  problem3.bgv  problem4.bgv  read_write_close  readme_1  test_new
examples/negative/: paper-problem1.bgv  paper-problem2.bgv
examples/old/: const  copy_file  create_op_drop  declarations  even_more_files  identity  locks  more_files  more_files_alt2  more_files_alt3  readme_2
examples/positive/: math-server-1-send-and-receive.bgv  math-server-2-unsugared.bgv  math-server-3-choice.bgv  math-server-4-refactor.bgv  math-server-5-recursion.bgv  new-binclients.bgv  new-fanout.bgv  new-genarith.bgv  other-fanout.bgv  other-infinite.bgv  other-recursion.bgv  paper-1-branching.bgv  paper-1-forward.bgv  paper-2-aliasing.bgv  paper-2-branching.bgv  paper-3-aliasing.bgv  paper-3-threads.bgv  paper-4-higherorder.bgv  paper-4-threads.bgv  paper-5-higherorder.bgv  (+2 more)
src/: error_reporting.rs  lexer.rs  main.rs  parser.rs  pretty.rs  ren.rs  rep.rs  semantics.rs  syntax.rs  tests.rs  type_checker.rs  type_context.rs  usage_map.rs
(+12 files in other folders)
